--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
 
   <p>Esto es porque los planetas tienen distintos pesos y, por tanto, la fuerza de la gravedad es distinta en cada uno de ellos. Por ejemplo, si pesas 100 libras (45 kilos) en la Tierra, pesarías solo 38 libras (17 kilos) en Mercurio.</p>
 
-<img src="peso.png" width="400" height="200" align: center
+<p class="centrado">
+<img src="peso.png" width="400" height="200"
+</p>
 
 </body>
 
 <style>
+  p.centrado{
+    text-align: center;
+  }
+  
 body {
   background-color: #ffa500;
   text-aling: center;
@@ -427,6 +433,6 @@ btnToggle.addEventListener("click", function () {
   document.getElementById("sidebar").classList.toggle("active");
 });
 </script>
-<img src="planetas.jpg" width="900" align: center
+<img src="planetas.jpg" width="900" text-align: center
      height="400">
 </html>
