--- a/index.html
+++ b/index.html
@@ -395,9 +395,11 @@ p {
 }
 
 </style>
+<p class="centrado">
 <h1>Tu peso en otro planeta</h1>
 <font size=4>En la tierra pesas distinto que en marte o jupiter</font>
 <font color="Blue">Calculando...</font>
+</p>
 <script>
 var apellido = prompt("Cual es tu nombre?");
 var usuario = prompt("Cual es tu peso?");
