--- a/index.html
+++ b/index.html
@@ -435,6 +435,8 @@ btnToggle.addEventListener("click", function () {
   document.getElementById("sidebar").classList.toggle("active");
 });
 </script>
-<img src="planetas.jpg" width="900" text-align: center
+<p class="centrado">
+<img src="planetas.jpg" width="900" 
      height="400">
+</p>
 </html>
